gcc/testsuite/gm2.dg/pim/fail/opaquedefs.def
DEFINITION MODULE opaquedefs ;  

TYPE
   OpaqueA ;
   OpaqueB ;   

END opaquedefs.
